v0.7.4 (ta)    2003-04-09
 -added periodic title string update option; the interval is adjustable
 -fixed bug with button positions where gaps in the titlebar could be
 	created (as it seems i simply mixed up left and right)

v0.7.3 (ta)    2003-01-19
 -added button icon set option, we now have different button icon sets
   that are chooseable, ie have other icons than the default ones with
   different sizes
 -added some more very small scripts that help me develop the theme
 -changed names of title string vars $height and $width to $width-content
   and $height-content because they contain only the width and height
   of the content window
 -titlestring vars $depth, $width and $height were also added
 -added .ctags file
 -improved theme updating speed a bit of some options
 -added title vertical alignment option (besides the alignment options
   can be turned of completely now)
 -clean up & reformatting
 -changed/improved internal button handling a bit
   (in the hope that this will make work easier in the future)
 -buttons now have a default (built-in) keymap
   (custom keymaps are still possible of course)
 -changed button position/keymap grouping
 -added look position button
 -fixed title string alignment bug for non-gradient mode
 -corner width adjustment is configurable for maximized windows
 -fixed a bugs in colorspace conversion
   (rgb2hsv: ignore the alpha channel for calculation;
   fixed rounding loss in both functions)
 
v0.7.2 (ta)    2002-12-24
 -fixed some minor other bugs
 -changed direction of button position models,
   negative value now mean left and positiv values mean right
 -clean up & reformatting
 -implemented experimental gradient titlebar mode
 -the left and right offset for the buttons can be set independently
   (they were both 1 before (hardcoded)
 -the buttons are resizeable (not only the icons, the whole button)
   (this includes an alignment option)
 -more configurable button colors