@@ -1,3 +1,6 @@
+2008 Aug
+ - Incorporated to Sawfish
+
 v0.7.4 (ta)    2003-04-09
  -added periodic title string update option; the interval is adjustable
  -fixed bug with button positions where gaps in the titlebar could be
